delete blog entegration with opensearch is adjusted.